exports[`test simple renders 1`] = `
<div>
  <button
    onClick={[Function anonymous]}>
    get XLSX
  </button>
</div>
`;

exports[`test throws prop type error if has no cells 1`] = `
<div>
  <div>
    ts
  </div>
</div>
`;
